dynamix/force-app/main/default/objects/ContentVersion/fields/BookingId__c.field-meta.xml
<CustomField>
    <fullName>BookingId__c</fullName>
    <description>BookingId For Backend.</description>
    <label>BookingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>