dynamix/force-app/main/default/objects/ContentVersion/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SObjectType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost Sheet</fullName>
            </value>
            <value>
                <fullName>Aadhar</fullName>
            </value>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Approved Cost Sheet</fullName>
            </value>
            <value>
                <fullName>Booking Form</fullName>
            </value>
            <value>
                <fullName>Other Supporting Documents</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Agreement Sale</fullName>
            </value>
            <value>
                <fullName>Architecture Certificate</fullName>
            </value>
            <value>
                <fullName>Allotment</fullName>
            </value>
            <value>
                <fullName>Payment Receipt</fullName>
            </value>
            <value>
                <fullName>Agreement Checklist</fullName>
            </value>
            <value>
                <fullName>Name Change Note</fullName>
            </value>
            <value>
                <fullName>KIT</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Sanction Letter</fullName>
            </value>
            <value>
                <fullName>Index II Document</fullName>
            </value>
            <value>
                <fullName>Flat Cancellation</fullName>
            </value>
            <value>
                <fullName>Flat Refund</fullName>
            </value>
            <value>
                <fullName>Stamp Duty</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
                <label>TDS Challan</label>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Bank NOC</fullName>
            </value>
            <value>
                <fullName>Lien Letter</fullName>
            </value>
            <value>
                <fullName>Brokerage Invoice</fullName>
            </value>
            <value>
                <fullName>CheckList – Booking Checklist</fullName>
            </value>
            <value>
                <fullName>CheckList – Cost Change Note</fullName>
            </value>
            <value>
                <fullName>Checklist – Stamp Duty Payment</fullName>
            </value>
            <value>
                <fullName>CheckList – KIT Handover</fullName>
            </value>
            <value>
                <fullName>CheckList – Excess Amount Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>