dynamix/force-app/main/default/objects/ContentVersion/fields/LinkedId__c.field-meta.xml
<CustomField>
    <fullName>LinkedId__c</fullName>
    <label>LinkedId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>