dynamix/force-app/main/default/objects/ContentVersion/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <label>SObjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project__c</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Booking__c</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Project_Progress__c</fullName>
            </value>
            <value>
                <fullName>Bank_Loan_Details__c</fullName>
            </value>
            <value>
                <fullName>Builder_Organisation__c</fullName>
            </value>
            <value>
                <fullName>Payment_Milestones__c</fullName>
            </value>
            <value>
                <fullName>Broker_Payment__c</fullName>
            </value>
            <value>
                <fullName>Property__c</fullName>
            </value>
            <value>
                <fullName>Demand__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>